@@ -69,3 +69,4 @@
 [2025-04-23 08:31:29]	No se encontró una version válida	Nueva vista para editar items en modal
 [2025-06-02 18:17:59]	No se encontró una version válida	Previo nuevas vistas
 [2025-06-03 00:28:16]	No se encontró una version válida	GRADLE configurado para JETPACk COMPOSE
+[2025-06-03 21:12:28]	No se encontró una version válida	COMPILA con JetPack Compose y Desugaring
